# Miscellaneous

./: AssetFinder.cpp  BrainfuckCCompiler.c  BrainfuckInterpreter.c  Core.h  DataTypes.h  Hash.dart  Hash.h  InputHandler.h  Profiler.h  ProgressBar.h  README.md  Result.h  String.h  TestString.h  Vector.h  array.h  autoclicker.cpp  back.cpp  backup.cpp  content-size.cpp  cstring.h  data.cpp  exprtk.hpp  hangman.cpp  hash.cpp  hash.zig  hash_benchmark.cpp  hash_benchmark_file.cpp  hash_benchmark_file_generate.cpp  hash_o.cpp  hash_test.cpp  hash_test_generator.py  image_to_ascii.cpp  mousetracker.cpp  nks.py  ohmslaw.nim  pc_startup.cpp  red_triangle.cpp  reminder.cpp  repacker-zip.cpp  (+8 more)
CWave/: .gitignore  CMakeLists.txt  README.md
CWave/src/: audio_capture.cpp  audio_capture.h  config.h  fft.cpp  fft.h  main.cpp  visualizer.cpp  visualizer.h
CWave/src/platform/: platform.h
CWave/src/platform/linux/: audio_capture_pulseaudio.cpp  audio_capture_pulseaudio.h
CWave/src/platform/macos/: audio_capture_coreaudio.cpp  audio_capture_coreaudio.h  audio_capture_coreaudio_tap.mm
CWave/src/platform/windows/: audio_capture_wasapi.cpp  audio_capture_wasapi.h
Input/: Snake.h  main.cpp  makefile
SnakeConsole/: Input.h  Snake.cpp  tc.h
Tetris/: CMakeLists.txt  README.md
Tetris/src/: board.cpp  board.h  game.cpp  game.h  renderer.cpp  renderer.h  tetromino.cpp  tetromino.h
descend_calc/: descend_calc.c  descend_calc.cpp  descend_calc.cs  descend_calc.dart  descend_calc.fs  descend_calc.go  descend_calc.hs  descend_calc.java  descend_calc.js  descend_calc.kt  descend_calc.lua  descend_calc.nim  descend_calc.php  descend_calc.pl  descend_calc.py  descend_calc.r  descend_calc.rb  descend_calc.rs  descend_calc.s  descend_calc.sh  descend_calc.swift  descend_calc.ts  descend_calc.v  descend_calc.vb  descend_calc.zig  descend_calc_matlab.m  descend_calc_objective_c.m
imf/: imf.cpp
sizeof/: makefile  readme  sizeof.c
traffic_light/: circuit.cddx  intersection.cddx  traffic_light.ino
